--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon --watch src --exec ts-node src/server.ts",
-    "build": "tsc",
+    "build": "tsc && npx prisma migrate deploy",
     "start": "node dist/src/server.js",
-    "migrate": "npx prisma migrate deploy",
-    "postinstall": "npm run migrate",
     "seed:user": "tsx scripts/seed-user.ts"
   },
   "keywords": [],
