--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "tizii-backend",
   "version": "1.0.0",
   "main": "server.js",
+  "description": "",
+  "author": "",
+  "license": "ISC",
+  "keywords": [],
   "scripts": {
     "dev": "nodemon --watch src --exec ts-node src/server.ts",
-    "build": "tsc && npx prisma migrate deploy",
+    "postinstall": "prisma generate",
+    "build": "tsc && npx --no-install prisma migrate deploy",
     "start": "node dist/src/server.js",
     "seed:user": "tsx scripts/seed-user.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "@prisma/client": "^6.18.0",
     "prisma": "^6.18.0",
