--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   "keywords": [],
   "scripts": {
     "dev": "nodemon --watch src --exec ts-node src/server.ts",
-    "postinstall": "prisma generate",
-    "build": "tsc && chmod +x ./node_modules/.bin/prisma && npx prisma migrate deploy",
+    "build": "tsc && chmod +x ./node_modules/.bin/prisma && npx prisma generate && npx prisma migrate deploy",
     "start": "node dist/src/server.js",
     "seed:user": "tsx scripts/seed-user.ts"
   },
