--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "tizii-backend",
   "version": "1.0.0",
-  "main": "server.js",
-  "description": "",
-  "author": "",
-  "license": "ISC",
-  "keywords": [],
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "nodemon --watch src --exec ts-node src/server.ts",
     "build": "tsc && chmod +x ./node_modules/.bin/prisma && npx prisma generate && npx prisma migrate deploy",
