--- a/package.json
+++ b/package.json
@@ -6,22 +6,20 @@
   },
   "scripts": {
     "dev": "nodemon --watch src --exec ts-node src/server.ts",
-    "build": "tsc && chmod +x ./node_modules/.bin/prisma && npx prisma generate && npx prisma migrate deploy",
+    "build": "tsc",
     "start": "node dist/src/server.js",
     "seed:user": "tsx scripts/seed-user.ts"
   },
   "dependencies": {
-    "@prisma/client": "^6.18.0",
-    "prisma": "^6.18.0",
-    "typescript": "^5.9.3",
-    "@types/node": "^24.9.1",
-    "@types/express": "^5.0.3",
-    "@types/cors": "^2.8.19",
-    "@types/cookie-parser": "^1.4.9",
+    "@prisma/client": "^6.19.0",
+    "@types/axios": "^0.9.36",
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/axios": "^0.9.36",
+    "@types/node": "^24.9.1",
     "@types/pg": "^8.6.7",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
@@ -33,7 +31,9 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "prisma": "^6.19.0",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10",
